# hitsz_radar_2022

./: .gitignore  LOCATING.md  README.md  config.py  config_type.py  location_test.py  main.py  main_cv.py  main_v2.py  main_v3.py  main_v4.py  main_v4_rs.py  main_v4_rs_nomp.py  main_v5.py  main_v6.py  pyproject.toml  real_points.py  requirements.txt  ros.sh  run_roscore.sh  start.sh  test.py  test_la.py  testbench.py  雷达epnp表.xlsx
Serial/: HP_show.py  UART.py  port_operation.py
abstraction/: provider.py
camera/: cam.py  cam_dh.py  cam_hk.py  cam_hk_v3.py  cam_new.py  cam_video.py  depth_cam.py  dh_cam.py  hk_cam.py  video.py
doc/: INFRASTRUCTURE.md  LOCATING.md  RDR_SYNC_PROBLEM.md  README.md
logger/: logger.py
mapping/: Demo_v2.ui  Demo_v3.ui  Demo_v4.ui  Demo_v4_1.ui  Demo_v5.ui  draw.py  draw_map.py  drawing.py  event_handler.py  mainEntry.py  message.py  pc_show.py  ui.py  ui_old.py  ui_v2.py  ui_v3.py  ui_v4.py
mul_manager/: mul_manager.py  pro_manager.py
net/: network.py  network_pro.py  network_pro.py.pclprof  tensorrtx.py
proto/: .gitignore
pyrdr/: client.py
radar_detect/: Linar.py  Linar_rs.py  [File]location_alarm.py  alarm.py  back_projection.py  common.py  correction.py  decision.py  eco_forecast.py  location.py  location_Delaunay.py  location_alarm.py  location_binocular.py  missile.py  missile_dectet.py  reproject.py  solve_pnp.py
record/: record_frame.py  replay_frame.py
resources/: config.py  config_bak.py
serial/: __init__.py  process.py
serial_port/: HP_show.py  UART.py  port_operation.py
service/: abstract_service.py  (+4 more)
(+74 files in other folders)
